--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "7.2.9",
     "@asymmetrik/ngx-leaflet": "5.0.1",
     "@ngrx/store": "7.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "10.0.0",
     "@types/jquery": "3.3.29",
     "animate.css": "3.7.0",
